--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ readme = "README.md"
 zerocopy = "0.3.0"
 byteorder = "1.3.4"
 divsufsort = { version = "2.0.0", optional = true }
-anyhow = "1.0.28"
+thiserror = "1.0.59"
 cdivsufsort = { version = "2.0.0", optional = true }
 argh = "0.1.3"
 
