--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,12 @@ license = "MIT"
 readme = "README.md"
 
 [dependencies]
-zerocopy = "0.3.0"
-byteorder = "1.3.4"
+zerocopy = { version = "0.7", features = ["derive"] }
+byteorder = "1.5"
 divsufsort = { version = "2.0.0", optional = true }
 thiserror = "1.0.59"
 cdivsufsort = { version = "2.0.0", optional = true }
-argh = "0.1.3"
+argh = "0.1"
 
 [features]
 default = ["c", "diff"]
